fixed margin and gap in accomodation section.

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ html
 
 .navLogo
 {
-    padding-left: 1.25rem;
+    padding-left: 3.125rem;
+    
 }
 
 .navMenu
@@ -97,8 +98,7 @@ section > p
     background-color: #F2F2F2;
     border-radius: 1rem 0 0 1rem;
     padding: 1rem;
-    text-align: center;
-    vertical-align: middle;
+ 
 }
 
 section input
@@ -112,6 +112,7 @@ section input::placeholder
 {
     font-size: 1.25rem;
     color: #131516;
+   
 }
 
 .searchButton
@@ -123,6 +124,7 @@ section input::placeholder
     color: #fff;
     font-size: 1.25rem;
 }
+
 
 
 
@@ -161,7 +163,6 @@ section input::placeholder
     /* margin-top: 30px;
     margin-left: 3.125rem; */
 }
-
 
 .chip
 {
@@ -235,7 +236,7 @@ section input::placeholder
     vertical-align: middle;
     color: #0065FC;
     padding: 2px;
-    margin-left: 3.125rem;
+    margin-left: 2.5rem;
 }
 
 .infoText
@@ -258,6 +259,9 @@ section input::placeholder
     flex-flow: row wrap;
     justify-content: space-around;
     box-sizing: border-box;
+    /* gap: 2.5rem; */
+    margin-top: 1.5rem;
+    
 }
 
 .accommodationInCity
@@ -265,8 +269,14 @@ section input::placeholder
     box-sizing: border-box;
     background-color:  #F2F2F2;
     border-radius: 1.25rem;
-    flex: 2 0 25rem;
-    margin: 1.25rem 2.5rem 0 3.125rem;
+    /* flex: 2 0 25rem; */
+    /* margin: 1.25rem 2.5rem 0 3.125rem; */
+    flex-grow: 2;
+    flex-basis: 25rem;
+    /* margin-left: 2.5rem; */
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+  
 }
 
 .accommodationInCity h3
@@ -280,6 +290,7 @@ section input::placeholder
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    
 }
 
 .cardLeft
@@ -287,22 +298,22 @@ section input::placeholder
     /* flex: 0 0 23.125rem; */
     flex: 0 0 16rem;
     background-color: #fff;
-    /* margin: 1.25rem 0.625rem; */
+    margin: 1.25rem 0.625rem;
     margin-top: 1.825rem;
     border-radius: 1.25rem;
-
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 }
 
 .cardImageLeft
 {
     text-align: center;
-    margin: 5px 5px 0 5px;
+    margin: 0.3rem 0.3rem 0 0.3rem;
 }
 
 .cardImageLeft img
 {
     width: 100%;
-    height: 12.5rem;
+    height: 7.5rem;
     border-radius: 1.25rem 1.25rem 0 0;
     object-fit: cover;
 }
@@ -317,7 +328,7 @@ section input::placeholder
 
 .cardContentLeft p, cardContentRight p
 {
-    margin: 5px;
+    margin: 0.3rem;
 }
 
 .cardContentLeft p:nth-child(1), .cardContentLeft p span, .cardContentRight p:nth-child(1), .cardContentRight p span
@@ -336,6 +347,8 @@ section input::placeholder
 .rating
 {
     margin-bottom: 0;
+    font-size: .8rem;
+    margin: 0.6rem 0.3rem 0.2rem 0.3rem;
 }
 
 
@@ -352,14 +365,17 @@ section input::placeholder
 .showMore
 {
     margin-bottom: 3.125rem;
+
 }
 
 .showMore a
 {
     text-decoration: none;
     color: #131516;
-    margin-left: 1.5rem;
+    margin-left: 3.125rem;
 }
+
+
 
 
 /* Most popular section---------------------------------- */
@@ -370,8 +386,13 @@ section input::placeholder
     background-color:  #F2F2F2;
     border-radius: 1.25rem;
     flex: 1 0 12.5rem;
-    margin-top: 1.25rem;
-    margin-right: 3.125rem;
+    /* margin-top: 1.25rem;
+    margin-right: 3.125rem; */
+    /* flex-grow: 1;
+    flex-basis: 12.5rem; */
+    /* margin-right: 2.5rem; */
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
 }
 
 .cardsRight
@@ -392,6 +413,9 @@ section input::placeholder
     margin: 0 1.25rem 1.25rem 1.25rem;
     border-radius: 1.25rem;
     box-sizing: border-box;
+    max-width: 20.5rem;
+    min-width: 19rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 
 }
 
@@ -399,13 +423,13 @@ section input::placeholder
 {
     flex: 0 0 40%;
     text-align: center;
-    margin: 5px;
+    margin: 0.3rem;
 }
 
 .cardImageRight img
 {
     width: 100%;
-    height: 100%;
+    height: 10rem;
     border-radius: 1.25rem 0 0 1.25rem;
     object-fit: cover;
 }
@@ -438,10 +462,10 @@ section input::placeholder
 .actiCards
 {
     display: grid;
-    grid-template: repeat(6, 2rem) / repeat(4, 1fr);
-    grid-gap: 2rem;
+    grid-template: repeat(6, 2.5rem) / repeat(4, 1fr);
+    grid-gap: 2.5rem;
     box-sizing: border-box;
-    height: 22rem;
+    height: 27.5rem;
     margin-right: 3.125rem;
     margin-left: 3.125rem;
 }
@@ -459,7 +483,8 @@ section input::placeholder
     max-height:100%;
     height: 90%;
     border-radius: 1rem 1rem 0 0;
-    box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.2); */
 }
 
 .actiCard
@@ -467,32 +492,33 @@ section input::placeholder
     width: 100%;
     text-align: center;
     box-sizing: border-box;
+    
 }
 
 
 .actiCard:nth-child(1) img, .actiCard:nth-child(4) img
 {
-    height: 19.5rem;
+    height: 25rem;
 } 
 
 .actiCard:nth-child(2) img
 {
-    height: 11.5rem;
+    height: 14.5rem;
 } 
 
 .actiCard:nth-child(3) img
 {
-    height: 3.5rem;
+    height: 5rem;
 } 
 
 .actiCard:nth-child(5) img
 {
-    height: 7.5rem;
+    height: 10rem;
 } 
 
 .actiCard:nth-child(6) img
 {
-    height: 7.5rem;
+    height: 10rem;
 } 
 
 .actiCard p
@@ -506,7 +532,7 @@ section input::placeholder
     border-radius: 0 0 1rem 1rem;
     font-size: 1rem;
     font-weight: 600;
-    box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
 }
 
 .actiCard:nth-child(1)
@@ -557,10 +583,10 @@ footer
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    width: 100%;
+    width: 100vw;
     margin-top: 3.5rem;
     font-size: 1.25rem;
-    line-height: 1.4rem;
+    line-height: 2.4rem;
     padding-top: 1.2rem;
     padding-bottom: .6rem;
 }
